--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers.">
         <meta property="og:url" content="https://paveldogreat.github.io/WebGL-Fluid-Simulation/">
         <meta property="og:image" content="https://paveldogreat.github.io/WebGL-Fluid-Simulation/logo.png">
-
         <script type="text/javascript" src="dat.gui.min.js"></script>
         <style>
             * {
@@ -100,12 +99,13 @@
                 content: 'd';
             }
         </style>
+        <!--
         <script>
             window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
             ga('create', 'UA-105392568-1', 'auto');
             ga('send', 'pageview');
         </script>
-        <script async src='https://www.google-analytics.com/analytics.js'></script>
+        <script async src='https://www.google-analytics.com/analytics.js'></script>-->
     </head>
     <body>
         <canvas></canvas>
