Plugging in meyda. Horrendus and amusing bug.

--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
     <body>
         <canvas></canvas>
         <script src="./script.js"></script>
+        <script src="./meyda.min.js"></script>
     </body>
 </html>
