--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
     <body>
         <canvas></canvas>
         <script src="./script.js"></script>
-        <script src="./meyda.min.js"></script>
+        <script src="https://unpkg.com/meyda/dist/web/meyda.min.js"></script>
     </body>
 </html>
